--- a/MentalHealthMate/pubspec.yaml
+++ b/MentalHealthMate/pubspec.yaml
@@ -30,13 +30,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   smooth_page_indicator: ^1.0.0
+  flutter_local_notifications: ^9.0.0 #Takip sayfasında bildirim yollamak adına böyle bir şey kullanıyoruz
+  provider: ^6.0.0
+  http: ^1.2.1
+  groq: ^0.0.5
 
 
 dev_dependencies:
